<resources>
    <string name="app_name">WhatSIW</string>
    <string name="click">Touch!</string>
    <string name="imdb_stats">http://www.imdb.com/stats</string>
    <string name="imdb_link">http://www.imdb.com/title/tt</string>
    <string name="imdb_css_selector">[cellspacing="2"] tr [align="right"] </string>
    <string name="log_stats">stats</string>
    <string name="log_stats_start">Getting stats</string>
    <string name="log_omdb_api">omdb api</string>
    <string name="log_id_generation">imdbId generation</string>
    <string name="log_id_generation_same_id">seems like there are two same imdbId, skipping</string>
    <string name="imdb_prefix">tt</string>
    <string name="imdb_leading_zeroes">%07d</string>
    <string name="imdb_na">N/A</string>
    <string name="log_omdb_unknown_imdb_rating">Unknown imdb rating, setting 1</string>
    <string name="log_imdb_score">imdb score is </string>
    <string name="log_null_movie">Movie is null, fallbacking</string>
    <string name="log_fallback_id">Fallback imdbId is </string>
    <string name="metascore">Score:</string>
    <string name="metascore_na">Score: N/A</string>
    <string name="next_movie">NEXT MOVIE</string>
    <string name="ignore_this_movie">IGNORE MOVIE</string>
    <string name="title_activity_ignored_movies">Ignored Movies</string>
    <string name="menu_item_ignored">Ignored movies</string>
    <string name="getting_movie">Loading movieConverted</string>
    <string name="unignore_movie">Remove</string>
    <string name="actors">Actors:&#160;</string>
    <string name="awards">Awards:&#160;</string>
    <string name="director">Director:&#160;</string>
    <string name="view_on_imdb">VIEW ON IMDB</string>
    <string name="movie_ignored">Movie was ignored</string>
    <string name="no_internet">No Internet connection</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait…</string>
    <string name="episode_ignored">Episode #</string>
    <string name="dupe_ignored">#DUPE#</string>
    <string name="title_activity_settings">Settings</string>
    <string name="filters_category">Filters</string>
    <string name="only_with_pic">Only with pictures</string>
    <string name="only_with_score">Only with score</string>
    <string name="only_with_awards">Only with awards</string>
    <string name="only_with_pic_prefs_key">pics</string>
    <string name="only_with_score_prefs_key">score</string>
    <string name="only_with_awards_prefs_key">awards</string>
    <string name="ignore">Ignored</string>
    <string name="by_pic">By picture</string>
    <string name="by_award">By award</string>
    <string name="by_score">By score</string>
    <string name="slower_warning">Search can be a lot slower!</string>
    <string name="no_image">NO IMAGE</string>
    <string name="roll_menu">Roll!</string>
</resources>
