<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.fragments.Movie">

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="@dimen/big_picture"
                android:paddingBottom="@dimen/small_padding"/>


            <TextView
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/genre"
                android:gravity="end"
                android:paddingEnd="@dimen/small_padding"
                android:paddingStart="@dimen/small_padding"
                android:textSize="@dimen/big_text"/>

            <TextView
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cover"
                android:gravity="start"
                android:paddingEnd="@dimen/small_padding"
                android:paddingStart="@dimen/small_padding"
                android:textSize="@dimen/big_text"/>

            <TextView
                android:id="@+id/meter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/year"
                android:gravity="end"
                android:paddingEnd="@dimen/small_padding"
                android:paddingStart="@dimen/small_padding"
                android:textSize="@dimen/big_text"/>

            <TextView
                android:id="@+id/fullText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/year"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/small_padding"
                android:paddingStart="@dimen/small_padding"
                android:paddingTop="@dimen/big_padding"
                android:textSize="@dimen/big_text"
                />

            <TextView
                android:id="@+id/actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/fullText"
                android:paddingEnd="@dimen/small_padding"
                android:paddingStart="@dimen/small_padding"
                android:paddingTop="@dimen/big_padding"
                android:textSize="@dimen/big_text"/>

            <TextView
                android:id="@+id/awards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/actors"
                android:paddingEnd="@dimen/small_padding"
                android:paddingStart="@dimen/small_padding"
                android:paddingTop="@dimen/big_padding"
                android:textSize="@dimen/big_text"/>

            <TextView
                android:id="@+id/director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/awards"
                android:paddingEnd="@dimen/small_padding"
                android:paddingStart="@dimen/small_padding"
                android:paddingTop="@dimen/big_padding"
                android:textSize="@dimen/big_text"/>

            <Button
                android:id="@+id/redraw"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/director"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingEnd="@dimen/small_padding"
                android:paddingStart="@dimen/big_padding"
                android:text="@string/next_movie"
                android:textSize="@dimen/small_text"/>

            <Button
                android:id="@+id/ignore"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/redraw"
                android:layout_alignBottom="@+id/redraw"
                android:layout_marginStart="@dimen/small_padding"
                android:layout_toEndOf="@+id/redraw"
                android:paddingEnd="@dimen/small_padding"
                android:paddingStart="@dimen/small_padding"
                android:text="@string/ignore_this_movie"
                android:textSize="@dimen/small_text"/>

            <Button
                android:id="@+id/imdb_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/ignore"
                android:layout_alignBottom="@+id/ignore"
                android:layout_marginStart="@dimen/small_padding"
                android:layout_toEndOf="@+id/ignore"
                android:paddingEnd="@dimen/small_padding"
                android:paddingStart="@dimen/small_padding"
                android:text="@string/view_on_imdb"
                android:textSize="@dimen/small_text"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>